# mols2grid

./: .eslintrc.json  .gitignore  .prettierignore  .prettierrc.json  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  DEVELOPMENT.md  MANIFEST.in  README.md  codecov.yml  demo.ipynb  environment.yml  install.json  moenen_to-review.txt  mols2grid.json  notebooks  package-lock.json  package.json  pyproject.toml  run_test.py  se-config.toml  settings.json  setup.cfg  setup.py  tsconfig.json  webpack.config.js  π_moenen_to-review.txt  π_moenen_todo.txt
.github/workflows/: _build-package.yml  build.yml  ci.yml
docs/: conf.py  contents.md  environment.yml  index.rst  notebooks
docs/_static/: custom.css
docs/api/: callbacks.rst  molgrid.rst  simple.rst  utils.rst
docs/notebooks/: callbacks.ipynb  customization.ipynb  filtering.ipynb  quickstart.ipynb
mol2grid/: __init__.py  molgrid.py
mol2grid/templates/: pages.html  table.html
molgrid/: __init__.py  molgrid.py  utils.py
molgrid/templates/: pages.html  table.html
mols2grid/: __init__.py  _version.py  callbacks.py  datafiles.py  dispatch.py  molgrid.py  select.py  utils.py  widget.py
mols2grid/nbextension/: extension.js
mols2grid/templates/: interactive.html  pages.html  static.html  table.html
mols2grid/templates/css/: common.css  interactive.css  pages.css  shared.css  static.css  static.css.j2  table.css
mols2grid/templates/html/: checkbox_dropdown.html  common_header.html  iframe.html  iframe.html.j2  interactive_header.html  pages_header.html  static.html.j2
mols2grid/templates/js/: callback.js  draw_mol.js  filter.js  filter.js.j2  grid_interaction.js  interactive.js  kernel.js  molstorage.js  pages.js  popup.js  search.js  selection_actions-v1.js  selection_actions.js  sort-v1.js  sort.js  static.js.j2
mols2grid/templates/js/callbacks/: external_link.js  popup.js.j2  show_3d.js  show_3d.js.j2
mols2grid/widget/: __init__.py  _frontend.py  widget.py
mols2grid_widget/: .coveragerc  .gitignore  LICENSE.txt  MANIFEST.in  README.md  RELEASE.md  codecov.yml  install.json  mols2grid_widget.json  package-lock.json  package.json  pytest.ini  setup.py  webpack.config.js
mols2grid_widget/css/: widget.css
mols2grid_widget/js/: README.md  package.json  webpack.config.js
mols2grid_widget/js/lib/: example.js  extension.js  labplugin.js  widget.js
mols2grid_widget/mols2grid_widget/: __init__.py  _frontend.py  _version.py  example.py  widget.py
mols2grid_widget/mols2grid_widget/nbextension/: extension.js
mols2grid_widget/src/: extension.ts  plugin.ts  widget.ts
notebooks/: callbacks.ipynb
src/: amd-public-path.ts  export.ts  extension.ts  html.ts  iframe.ts  index.ts  initialize.ts  molgrid.ts  molstore.ts  plugin.ts  query.ts  utils.ts  version.ts  widget.css  widget.ts
src/interactions/: callback.ts  click.ts  keyboard.ts  resize.ts  search.ts  select.ts  sort.ts  tooltips.ts
src/rdkit/: draw.ts  smarts.ts
tests/: conftest.py  environment.yml  pytest.ini  test_callbacks.py  test_interface.py  test_molgrid.py  test_select.py  test_utils.py  webdriver_utils.py
tests/notebooks/: filtering.ipynb  tests.ipynb
