[metadata]
name = mols2grid
description = Chemical viewer for 2D structures of small molecules
author = Cédric Bouysset
author_email = bouysset.cedric@gmail.com
license = Apache License, Version 2.0
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cbouy/mols2grid
project_urls = 
    Changelog = https://github.com/cbouy/mols2grid/blob/master/CHANGELOG.md
    Discussions = https://github.com/cbouy/mols2grid/discussions
    Issues = https://github.com/cbouy/mols2grid/issues
classifiers =
    Development Status :: 4 - Beta
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
keywords =
    science
    chemistry
    chemoinformatics

[options]
packages = mols2grid

python_requires = >=3.6
install_requires =
    pandas
    jinja2>=2.11.0
zip_safe = False
include_package_data = True

[options.extras_require]
tests =
    ipython==7.12.0
    selenium==3.141.0
    cairosvg==2.5.2
    geckodriver-autoinstaller==0.1.0
    pytest==6.2.5
    pytest-cov==2.12.1
    codecov==2.1.12
    flaky==3.7.0
    pytest-order==1.0.1
