[metadata]
name = mols2grid
description = Chemical viewer for 2D structures of small molecules
author = Cédric Bouysset
author_email = cedric@bouysset.net
license = Apache License, Version 2.0
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cbouy/mols2grid
project_urls = 
    Documentation = https://mols2grid.readthedocs.io/en/latest/
    Changelog = https://github.com/cbouy/mols2grid/blob/master/CHANGELOG.md
    Discussions = https://github.com/cbouy/mols2grid/discussions
    Issues = https://github.com/cbouy/mols2grid/issues
classifiers =
    Development Status :: 4 - Beta
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
    Framework :: Jupyter
keywords =
    science
    chemistry
    cheminformatics
    jupyter
    widgets

[bdist_wheel]
universal = 1

[options]
packages = find:
python_requires = >=3.7
install_requires =
    pandas
    jinja2>=2.11.0
    ipywidgets>=7.0.0
zip_safe = False
include_package_data = True

[options.extras_require]
tests =
    ipython==7.12.0
    selenium==3.141.0
    cairosvg==2.5.2
    geckodriver-autoinstaller==0.1.0
    pytest==6.2.5
    pytest-cov==2.12.1
    codecov==2.1.12
    flaky==3.7.0
    pytest-order==1.0.1

build =
    build
